# 6450-spring-2026

./: .gitignore  .nojekyll  CLAUDE.html  _quarto.yml  _syllabus1.qmd  _variables.yml  about.html  about.qmd  index.html  index.qmd  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  syllabus.html  syllabus.qmd
assignments/: a02-parallelization.html  a02-parallelization.qmd  a03-cloud.html  a03-cloud.qmd
content/: 01-content.html  01-content.qmd  02-content.html  02-content.qmd  03-content.html  03-content.qmd  04-content.html  04-content.qmd  05-content.html  05-content.qmd  06-content.html  06-content.qmd  07-content.html  07-content.qmd  08-content.qmd  09-content.qmd  10-content.qmd  11-content.qmd  _06-quiz.qmd  index.html  index.qmd
labs/: 02-labs.html  02-labs.qmd  03-labs.html  03-labs.qmd  03a-labs.html  03a-labs.qmd  _01-labs.qmd  _03-labs.qmd  _04-labs.qmd  _05-labs.qmd  _06-labs.qmd  _07-labs.qmd  _08-labs.qmd  _09-labs.qmd  _10-labs.qmd  _11-labs.qmd  _13-labs.qmd  _metadata.yml  _week-tbd-labs.qmd  index.html  index.qmd
project/: project.html  project.qmd  reddit-s3-copy-instructions.html  reddit-s3-copy-instructions.md
resources/: narwhals-ibis-examples.html  narwhals-ibis-examples.qmd  uv.html  uv.qmd
site-content/: references.html  references.qmd
slides/: 01-slides.html  01-slides.qmd  02-slides.html  02-slides.qmd  03-slides.html  03-slides.qmd  04-slides.html  04-slides.qmd  05-slides.html  05-slides.qmd  06-slides.html  06-slides.qmd  07-slides.html  07-slides.qmd  08-slides.qmd  09-slides.qmd  10-slides.qmd  11-slides.qmd  (+4 more)
(+32 files in other folders)
