[project]
name = "spring2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.47",
    "botocore[crt]>=1.42.47",
    "duckdb>=1.4.4",
    "great-tables>=0.20.0",
    "httpfs>=0.0.1",
    "ibis>=3.3.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "jupyterlab>=4.5.4",
    "jupytext>=1.19.1",
    "marimo>=0.19.10",
    "narwhals>=2.16.0",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
    "s3fs>=0.4.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
